[package]
name = "textwrap"
version = "0.13.4"
authors = ["Martin Geisler <martin@geisler.net>"]
description = "Powerful library for word wrapping, indenting, and dedenting strings"
documentation = "https://docs.rs/textwrap/"
repository = "https://github.com/mgeisler/textwrap"
readme = "README.md"
keywords = ["text", "formatting", "wrap", "typesetting", "hyphenation"]
categories = ["text-processing", "command-line-interface"]
license = "MIT"
edition = "2018"
exclude = [".github/", ".gitignore", "benches/", "examples/", "fuzz/", "images/"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "linear"
harness = false
path = "benches/linear.rs"

[features]
default = ["unicode-linebreak", "unicode-width", "smawk"]

[dependencies]
smawk = { version = "0.3", optional = true }
terminal_size = { version = "0.1", optional = true }
unicode-linebreak = { version = "0.1", optional = true }
unicode-width = { version= "0.1", optional = true }

[dependencies.hyphenation]
git = "https://github.com/tapeinosyne/hyphenation"
rev = "d8d501a3731d"  # Until `Standard` implements `Clone`
optional = true
features = ["embed_en-us"]

[dev-dependencies]
criterion = "0.3"
lipsum = "0.7"
unic-emoji-char = "0.9.0"
version-sync = "0.9"

[target.'cfg(unix)'.dev-dependencies]
termion = "1.5"
