[package]
name = "textwrap"
version = "0.14.2"
authors = ["Martin Geisler <martin@geisler.net>"]
description = "Powerful library for word wrapping, indenting, and dedenting strings"
documentation = "https://docs.rs/textwrap/"
repository = "https://github.com/mgeisler/textwrap"
readme = "README.md"
keywords = ["text", "formatting", "wrap", "typesetting", "hyphenation"]
categories = ["text-processing", "command-line-interface"]
license = "MIT"
edition = "2018"
exclude = [".github/", ".gitignore", "benches/", "examples/", "fuzz/", "images/"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "linear"
harness = false
path = "benches/linear.rs"

[[bench]]
name = "indent"
harness = false
path = "benches/indent.rs"

[features]
default = ["unicode-linebreak", "unicode-width", "smawk"]

[dependencies]
hyphenation = { version = "0.8.2", optional = true, features = ["embed_en-us"] }
smawk = { version = "0.3", optional = true }
terminal_size = { version = "0.1", optional = true }
unicode-linebreak = { version = "0.1", optional = true }
unicode-width = { version= "0.1", optional = true }

[dev-dependencies]
criterion = "0.3"
lipsum = "0.8"
unic-emoji-char = "0.9.0"
version-sync = "0.9"

[target.'cfg(unix)'.dev-dependencies]
termion = "1.5"
