[package]
name = "textwrap-wasm-demo"
version = "0.1.0"
authors = ["Martin Geisler <martin@geisler.net>"]
description = "Textwrap WebAssembly demo"
repository = "https://github.com/mgeisler/textwrap"
license = "MIT"
edition = "2021"
publish = false  # This project should not be uploaded to crates.io

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
textwrap = { path = "../../" }

console_error_panic_hook = "0.1.7"
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.57", features = ["CanvasRenderingContext2d", "TextMetrics"] }
unicode-segmentation = "1.9.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[profile.release]
opt-level = "s"  # Optimize for small code size
