[package]
name = "textwrap-wasm-demo"
version = "0.1.0"
authors = ["Martin Geisler <martin@geisler.net>"]
edition = "2021"
license = "MIT"
publish = false # This project should not be uploaded to crates.io
repository = "https://github.com/mgeisler/textwrap"
description = "Textwrap WebAssembly demo"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
textwrap = { path = "../../" }

console_error_panic_hook = "0.1.7"
js-sys = "0.3.57"
unicode-segmentation = "1.9.0"
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.57", features = ["CanvasRenderingContext2d", "TextMetrics"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[profile.release]
opt-level = "s" # Optimize for small code size
